...

    var displayName: String {
        switch self {
        case .barunGothic: return "바른고딕"
        case .myeongjo:    return "명조"
        case .barunpen:    return "바른펜"
        case .brush:       return "붓글씨"
        case .shinb7:      return "신비"
        case .flowerRoad:  return "플라워로드"
        case .rock:        return "록"
        }
    }

...
